// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should render 1`] = `
<DocumentFragment>
  <div
    class="container mx-auto px-4 pizza"
  />
</DocumentFragment>
`;

exports[`Container should render as section 1`] = `
<DocumentFragment>
  <section
    class="container mx-auto px-4"
  />
</DocumentFragment>
`;
